--- a/build.gradle
+++ b/build.gradle
@@ -11,5 +11,6 @@ repositories {
 dependencies {
     compile('com.google.guava:guava:23.0')
     compile('ch.qos.logback:logback-classic:1.2.3')
+    compile group: 'org.reflections', name: 'reflections', version: '0.9.11'
     testCompile('junit:junit:4.12')
 }
